# sb_notify_service

./: .env  .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
admin_app/src/: manage.py
admin_app/src/apps/notifications/: admin.py  models.py
admin_app/src/apps/notifications/migrations/: 0001_initial.py  0002_apikey_updated_at_bot_created_at_bot_updated_at_and_more.py
admin_app/src/config/: settings.py
admin_app/src/utils/: file_utils.py
backend_app/: pyproject.toml
backend_app/src/: main.py  main_rps.py  main_sender.py
backend_app/src/api/: dependencies.py  notify_api.py  routers.py  user_api.py
backend_app/src/application/: api_key_service.py  notification_service.py
backend_app/src/core/: config.py  settings.py
backend_app/src/infra/: decorators.py  redis_client.py
backend_app/src/infra/database/models/: __init__.py  api_key.py  bot.py  user.py
backend_app/src/schemas/: notify_schema.py
backend_app/src/tasks/: rps.py  sender.py
docker/: nginx.conf  redis.conf
docker/admin/: Dockerfile
docker/backend/: Dockerfile
src/apps/notifications/: models.py
src/apps/notifications/migrations/: 0001_initial.py  0003_apikey_is_active.py
src/config/: urls.py
